--- a/index.html
+++ b/index.html
@@ -8,31 +8,6 @@
 <link rel="manifest" href="manifest.json">
 
 <style>
-#splash-screen {
-  position: fixed;
-  inset: 0;
-  background: linear-gradient(135deg, #2563eb, #3b82f6);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 9999;
-  color: white;
-  text-align: center;
-  animation: fadeOut 3s ease 5s forwards;
-}
-
-.splash-content h1 {
-  font-size: 28px;
-  margin-bottom: 10px;
-}
-
-@keyframes fadeOut {
-  to {
-    opacity: 0;
-    visibility: hidden;
-  }
-}
-
 :root {
   --bg: #f2f4f8;
   --card: rgba(255,255,255,0.9);
@@ -51,8 +26,8 @@
 
 body {
   margin:0;
-  font-family: "Segoe UI", sans-serif;
-  background: var(--bg);
+  font-family:"Segoe UI", sans-serif;
+  background:var(--bg);
   display:flex;
   justify-content:center;
   align-items:center;
@@ -60,18 +35,16 @@ body {
 }
 
 .card {
-  background: var(--card);
-  backdrop-filter: blur(20px);
+  background:var(--card);
+  backdrop-filter:blur(20px);
   padding:25px;
   border-radius:20px;
   width:95%;
   max-width:500px;
-  box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+  box-shadow:0 10px 30px rgba(0,0,0,0.1);
 }
 
-h1 {
-  text-align:center;
-}
+h1 { text-align:center; }
 
 input, select, button {
   width:100%;
@@ -83,11 +56,15 @@ input, select, button {
 }
 
 button {
-  background: var(--accent);
+  background:var(--accent);
   color:white;
   border:none;
   cursor:pointer;
   font-weight:bold;
+}
+
+.install-btn {
+  background:#16a34a;
 }
 
 .result {
@@ -95,7 +72,7 @@ button {
   font-size:30px;
   font-weight:bold;
   margin-top:20px;
-  transition: transform 0.2s;
+  transition:transform 0.2s;
 }
 
 .warning {
@@ -105,21 +82,44 @@ button {
   margin-top:15px;
   font-size:14px;
 }
+
+/* Splash */
+
+#splash-screen {
+  position:fixed;
+  inset:0;
+  background:linear-gradient(135deg,#2563eb,#3b82f6);
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  z-index:9999;
+  color:white;
+  text-align:center;
+  animation:fadeOut 1s ease 2s forwards;
+}
+
+@keyframes fadeOut {
+  to { opacity:0; visibility:hidden; }
+}
 </style>
 </head>
 
 <body>
 
 <div id="splash-screen">
-  <div class="splash-content">
+  <div>
     <h1>Simulateur Salaire</h1>
     <p>Version 1.0</p>
-    <p>Créé et édité par <span style="color:blue;">Blueman</span></p>
+    <p>Créé et édité par <span style="color:#ffd700;">Blueman</span></p>
   </div>
 </div>
 
 <div class="card">
 <h1>Simulateur Salaire</h1>
+
+<button id="installBtn" class="install-btn" style="display:none;">
+Installer l'application
+</button>
 
 <select id="grade"></select>
 <select id="echelon"></select>
@@ -142,37 +142,34 @@ et le montant de la mutuelle. ⚠️
 
 <script>
 
-// =========================
-// GRILLES
-// =========================
+/* =========================
+   GRILLES
+========================= */
 
-const GRILLE = {
-"Surveillant / Brigadier": {
+const GRILLE={
+"Surveillant / Brigadier":{
 1:{brut:1846.04,hs:15.21},2:{brut:1855.89,hs:15.30},
 3:{brut:1875.58,hs:15.46},4:{brut:1905.12,hs:15.70},
 5:{brut:1974.03,hs:16.27},6:{brut:2042.95,hs:16.84},
 7:{brut:2087.26,hs:17.20},8:{brut:2161.10,hs:17.81},
 9:{brut:2254.63,hs:18.58},10:{brut:2338.32,hs:19.27},
 11:{brut:2426.93,hs:20.00},12:{brut:2515.54,hs:20.73},
-13:{brut:2618.92,hs:21.58}
-},
-"Brigadier-chef": {
+13:{brut:2618.92,hs:21.58}},
+"Brigadier-chef":{
 1:{brut:2166.02,hs:17.85},2:{brut:2249.71,hs:18.54},
 3:{brut:2353.09,hs:19.39},4:{brut:2417.08,hs:19.92},
 5:{brut:2515.54,hs:20.73},6:{brut:2618.92,hs:21.58},
-7:{brut:2677.99,hs:22.07}
-},
-"Major": {
+7:{brut:2677.99,hs:22.07}},
+"Major":{
 1:{brut:2372.78,hs:19.56},2:{brut:2456.47,hs:20.25},
 3:{brut:2545.08,hs:20.98},4:{brut:2638.61,hs:21.75},
 5:{brut:2702.61,hs:22.27},6:{brut:2791.22,hs:23.00},
-7:{brut:2850.29,hs:23.49},8:{brut:2929.05,hs:24.14}
-}
+7:{brut:2850.29,hs:23.49},8:{brut:2929.05,hs:24.14}}
 };
 
-// =========================
-// CONSTANTES
-// =========================
+/* =========================
+   CONSTANTES
+========================= */
 
 const TAUX_PSS=0.285;
 const ICP=319.58;
@@ -190,9 +187,9 @@ const TAUX_BASE_CSG=0.9825;
 const TAUX_REDUCTION_HS=0.05;
 const TAUX_HS_EXO=0.0668;
 
-// =========================
-// INITIALISATION
-// =========================
+/* =========================
+   INITIALISATION
+========================= */
 
 const gradeSelect=document.getElementById("grade");
 const echelonSelect=document.getElementById("echelon");
@@ -207,16 +204,15 @@ updateEchelons();
 
 function updateEchelons(){
 echelonSelect.innerHTML="";
-let echelons=Object.keys(GRILLE[gradeSelect.value]);
-echelons.forEach(e=>{
+Object.keys(GRILLE[gradeSelect.value]).forEach(e=>{
 let opt=document.createElement("option");
 opt.text=e; echelonSelect.add(opt);
 });
 }
 
-// =========================
-// CALCUL
-// =========================
+/* =========================
+   CALCUL
+========================= */
 
 function calculer(){
 
@@ -236,7 +232,11 @@ let pss=brut_indiciaire*TAUX_PSS;
 let base_brute=brut_indiciaire+pss+ICP+IND_CSG;
 
 let hs_brut=hs*taux_hs;
-let brut_total=base_brute+hs_brut+(nuitS*IND_NUIT_SIMPLE)+(nuitM*IND_NUIT_MAJOREE)+(dim*IND_DIMANCHE);
+
+let brut_total=base_brute+hs_brut+
+(nuitS*IND_NUIT_SIMPLE)+
+(nuitM*IND_NUIT_MAJOREE)+
+(dim*IND_DIMANCHE);
 
 let pension=brut_indiciaire*TAUX_PENSION;
 let pension_pss=pss*TAUX_PENSION_PSS;
@@ -248,7 +248,6 @@ let csg_non_ded=base_csg*TAUX_CSG_NON_DED;
 let crds=base_csg*TAUX_CRDS;
 
 let rafp=Math.min((base_brute-brut_indiciaire)*0.05, brut_indiciaire*0.01);
-
 let reduction_hs=hs_brut*TAUX_REDUCTION_HS;
 
 let net_avant=brut_total-(pension+pension_pss+csg_ded+csg_non_ded+crds+rafp-reduction_hs);
@@ -262,12 +261,11 @@ let net_final=Math.round((net_avant-impot)*100)/100;
 animerCompteur(net_final);
 }
 
-// =========================
-// ANIMATION
-// =========================
+/* =========================
+   ANIMATION
+========================= */
 
 function animerCompteur(valeur){
-
 let result=document.getElementById("result");
 let start=0;
 let duration=1000;
@@ -286,8 +284,30 @@ setTimeout(()=>{result.style.transform="scale(1)";},200);
 result.innerText="💶 "+start.toFixed(2)+" €";
 }
 },interval);
-
 }
+
+/* =========================
+   INSTALL BUTTON
+========================= */
+
+let deferredPrompt;
+
+window.addEventListener('beforeinstallprompt', (e)=>{
+e.preventDefault();
+deferredPrompt=e;
+document.getElementById("installBtn").style.display="block";
+});
+
+document.getElementById("installBtn").addEventListener("click",async()=>{
+if(deferredPrompt){
+deferredPrompt.prompt();
+await deferredPrompt.userChoice;
+deferredPrompt=null;
+document.getElementById("installBtn").style.display="none";
+}else{
+alert("Sur iPhone :\n1️⃣ Ouvre dans Safari\n2️⃣ Clique sur Partager\n3️⃣ Ajouter à l'écran d'accueil");
+}
+});
 
 </script>
 
